--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.39.0"
+    "react-hook-form": "^7.39.0",
+    "react-icons": "^4.6.0"
+  },
+  "devDependencies": {
+    "sass": "^1.55.0"
   }
 }
