--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "chart.js": "^3.9.1",
     "next": "13.0.1",
     "react": "18.2.0",
