--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
+    "@uiball/loaders": "^1.2.6",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
     "next": "13.0.1",
@@ -16,7 +18,8 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "sass": "^1.55.0"
