--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@uiball/loaders": "^1.2.6",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
+    "js-cookie": "^3.0.1",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
